Molecules & Storybook Docs

--- a/packages/ui/src/components/storybook/Changelog.mdx
+++ b/packages/ui/src/components/storybook/Changelog.mdx
@@ -4,4 +4,33 @@ import { Meta } from '@storybook/addon-docs';
 
 # Changelog
 
-- Initial release
+## [Unreleased]
+
+### Added
+
+- **Molecules**:
+  - `Tooltip`: Hover information.
+  - `Popover`: Click-triggered overlay content.
+  - `HoverCard`: Preview content on hover.
+  - `ButtonGroup`: Group of buttons.
+  - `Card`, `Alert`, `Accordion`, `Collapsible`.
+
+- **Atoms**:
+  - `Button`, `Badge`, `Avatar`, `Skeleton`, `Separator`, `Spinner`, `Toggle`, `Typography` (Heading, Text).
+
+- **Forms**:
+  - `Input`, `Checkbox`.
+
+- **Navigation**:
+  - `Breadcrumb`, `Command`, `ContextMenu`.
+
+- **Feedback**:
+  - `Dialog`, `AlertDialog`.
+
+- **Data Display**:
+  - `AspectRatio`, `Calendar`, `Carousel`.
+
+### Changed
+
+- Refactored project structure to follow Atomic Design principles.
+- Updated `COMPONENT_PLAN.md` to reflect current progress.
