--- a/packages/ui/src/components/storybook/Introduction.mdx
+++ b/packages/ui/src/components/storybook/Introduction.mdx
@@ -2,13 +2,26 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Get Started/Introduction" />
 
-# UI Component Library
+# @labs/ui Component Library
 
-Welcome to the UI component library. Here you'll find documentation and usage examples for all available components, including Cards, Buttons, and more.
+Welcome to the **@labs/ui** component library. This library is built following **Atomic Design principles** and is powered by [shadcn/ui](https://ui.shadcn.com/) and [Tailwind CSS](https://tailwindcss.com/).
+
+## Organization
+
+Components are organized into the following categories:
+
+- **Atoms**: The smallest, indivisible building blocks (e.g., Button, Badge, Avatar, Spinner).
+- **Molecules**: Simple combinations of atoms (e.g., Card, Alert, Accordion, Tooltip).
+- **Forms**: Components for user data entry (e.g., Input, Checkbox).
+- **Navigation**: Components to help users move through the app (e.g., Breadcrumb, Command).
+- **Feedback**: Components for user interaction feedback (e.g., Dialog, Alert Dialog).
+- **Data Display**: Components for presenting data (e.g., AspectRatio, Calendar, Carousel).
 
 ## Features
-- Composable, accessible React components
-- Theming and customization support
-- Storybook-driven documentation
 
-Browse the sidebar for component stories and documentation.
+- **Accessible**: Built on top of Radix UI primitives for maximum accessibility.
+- **Customizable**: Styled with Tailwind CSS and fully themable via CSS variables.
+- **Composable**: Designed to be used together to build complex interfaces.
+- **Dark Mode**: First-class support for dark mode.
+
+Browse the sidebar to explore the components and their variants.
