updated changelog and introduced most of all the components explained in the list

--- a/packages/ui/src/components/storybook/Changelog.mdx
+++ b/packages/ui/src/components/storybook/Changelog.mdx
@@ -19,13 +19,13 @@ import { Meta } from '@storybook/addon-docs';
   - `Button`, `Badge`, `Avatar`, `Skeleton`, `Separator`, `Spinner`, `Toggle`, `Typography` (Heading, Text).
 
 - **Forms**:
-  - `Input`, `Checkbox`.
+  - `Input`, `Textarea`, `Checkbox`, `RadioGroup`, `Switch`, `Select`, `Slider`, `Form`, `Label`, `Combobox`, `DatePicker`, `InputOTP`, `ToggleGroup`.
 
 - **Navigation**:
-  - `Breadcrumb`, `Command`, `ContextMenu`.
+  - `Breadcrumb`, `Command`, `ContextMenu`, `Tabs`, `Pagination`, `DropdownMenu`, `Menubar`, `NavigationMenu`, `Drawer`.
 
 - **Feedback**:
-  - `Dialog`, `AlertDialog`.
+  - `Dialog`, `AlertDialog`, `Sheet`, `Sonner`, `Progress`.
 
 - **Data Display**:
   - `AspectRatio`, `Calendar`, `Carousel`.
