--- a/packages/ui/src/components/storybook/Introduction.mdx
+++ b/packages/ui/src/components/storybook/Introduction.mdx
@@ -1,27 +1,326 @@
-import { Meta } from '@storybook/addon-docs';
+import { Meta } from "@storybook/blocks";
 
 <Meta title="Get Started/Introduction" />
 
-# @labs/ui Component Library
+<div className="sb-container">
+  <div className='sb-section-title'>
+    # @labs/ui Component Library
+    
+    Welcome to the **@labs/ui** design system. A collection of accessible, reusable, and composable React components built with **Radix UI** and **Tailwind CSS**.
+    This library follows **Atomic Design principles** to help you build consistent and scalable user interfaces.
+  </div>
 
-Welcome to the **@labs/ui** component library. This library is built following **Atomic Design principles** and is powered by [shadcn/ui](https://ui.shadcn.com/) and [Tailwind CSS](https://tailwindcss.com/).
+  <div className="sb-section">
+    <div className="sb-section-item">
+      <span className="sb-section-icon">🎨</span>
+      <h4 className="sb-section-heading">Powered by shadcn/ui</h4>
+      <p className="sb-section-description">Built on top of the popular shadcn/ui component library for robust and accessible primitives.</p>
+    </div>
+    <div className="sb-section-item">
+      <span className="sb-section-icon">💅</span>
+      <h4 className="sb-section-heading">Styled with Tailwind</h4>
+      <p className="sb-section-description">Fully customizable using utility classes and CSS variables for theming.</p>
+    </div>
+     <div className="sb-section-item">
+      <span className="sb-section-icon">⚛️</span>
+      <h4 className="sb-section-heading">Atomic Design</h4>
+      <p className="sb-section-description">Organized following Atomic Design principles: Atoms, Molecules, Organisms.</p>
+    </div>
+  </div>
 
-## Organization
+  ## Explore Components
 
-Components are organized into the following categories:
+  <div className="sb-grid">
+    <a href="?path=/docs/atoms-button--docs" className="sb-card">
+      <h3 className="sb-card-title">⚛️ Atoms</h3>
+      <p className="sb-card-description">The smallest building blocks: Buttons, Badges, Avatars, Inputs.</p>
+    </a>
+    <a href="?path=/docs/molecules-card--docs" className="sb-card">
+      <h3 className="sb-card-title">🧬 Molecules</h3>
+      <p className="sb-card-description">Combinations of atoms: Cards, Alerts, Accordions.</p>
+    </a>
+    <a href="?path=/docs/forms-input--docs" className="sb-card">
+      <h3 className="sb-card-title">📝 Forms</h3>
+      <p className="sb-card-description">Interactive inputs and validation: Form, Select, Switch.</p>
+    </a>
+    <a href="?path=/docs/navigation-tabs--docs" className="sb-card">
+      <h3 className="sb-card-title">🧭 Navigation</h3>
+      <p className="sb-card-description">Wayfinding components: Tabs, Menus, Breadcrumbs.</p>
+    </a>
+    <a href="?path=/docs/feedback-dialog--docs" className="sb-card">
+      <h3 className="sb-card-title">💬 Feedback</h3>
+      <p className="sb-card-description">User feedback and overlays: Dialogs, Toasts, Progress.</p>
+    </a>
+     <a href="?path=/docs/data-display-aspectratio--docs" className="sb-card">
+      <h3 className="sb-card-title">📊 Data Display</h3>
+      <p className="sb-card-description">Presenting information: Calendars, Carousels, Tables.</p>
+    </a>
+  </div>
 
-- **Atoms**: The smallest, indivisible building blocks (e.g., Button, Badge, Avatar, Spinner).
-- **Molecules**: Simple combinations of atoms (e.g., Card, Alert, Accordion, Tooltip).
-- **Forms**: Components for user data entry (e.g., Input, Checkbox).
-- **Navigation**: Components to help users move through the app (e.g., Breadcrumb, Command).
-- **Feedback**: Components for user interaction feedback (e.g., Dialog, Alert Dialog).
-- **Data Display**: Components for presenting data (e.g., AspectRatio, Calendar, Carousel).
+  ## Component Index
 
-## Features
+  <div className="sb-index-container">
+    
+    <div className="sb-index-column">
+      <h3 className="sb-index-title">Atoms</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/atoms-avatar--docs">Avatar</a> - User profile image/fallback</li>
+        <li><a href="?path=/docs/atoms-badge--docs">Badge</a> - Small status indicator</li>
+        <li><a href="?path=/docs/atoms-button--docs">Button</a> - Interactive button</li>
+        <li><a href="?path=/docs/atoms-code--docs">Code</a> - Inline code display</li>
+        <li><a href="?path=/docs/atoms-separator--docs">Separator</a> - Visual divider</li>
+        <li><a href="?path=/docs/atoms-skeleton--docs">Skeleton</a> - Loading placeholder states</li>
+        <li><a href="?path=/docs/atoms-spinner--docs">Spinner</a> - Loading indicator</li>
+        <li><a href="?path=/docs/atoms-toggle--docs">Toggle</a> - Two-state button</li>
+        <li><a href="?path=/docs/atoms-typography--docs">Typography</a> - Headings, Paragraphs, Text styles</li>
+      </ul>
 
-- **Accessible**: Built on top of Radix UI primitives for maximum accessibility.
-- **Customizable**: Styled with Tailwind CSS and fully themable via CSS variables.
-- **Composable**: Designed to be used together to build complex interfaces.
-- **Dark Mode**: First-class support for dark mode.
+      <h3 className="sb-index-title">Molecules</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/molecules-accordion--docs">Accordion</a> - Collapsible content sections</li>
+        <li><a href="?path=/docs/molecules-alert--docs">Alert</a> - Status message with icon</li>
+        <li><a href="?path=/docs/molecules-buttongroup--docs">ButtonGroup</a> - Group of buttons</li>
+        <li><a href="?path=/docs/molecules-card--docs">Card</a> - Container with header, content, and footer</li>
+        <li><a href="?path=/docs/molecules-collapsible--docs">Collapsible</a> - Simple expand/collapse</li>
+        <li><a href="?path=/docs/molecules-hovercard--docs">HoverCard</a> - Preview content on hover</li>
+        <li><a href="?path=/docs/molecules-popover--docs">Popover</a> - Click-triggered overlay content</li>
+        <li><a href="?path=/docs/molecules-tooltip--docs">Tooltip</a> - Hover information</li>
+      </ul>
+    </div>
 
-Browse the sidebar to explore the components and their variants.
+    <div className="sb-index-column">
+      <h3 className="sb-index-title">Forms</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/forms-checkbox--docs">Checkbox</a> - Binary choice</li>
+        <li><a href="?path=/docs/forms-combobox--docs">Combobox</a> - Searchable dropdown</li>
+        <li><a href="?path=/docs/forms-datepicker--docs">DatePicker</a> - Date selection input</li>
+        <li><a href="?path=/docs/forms-form--docs">Form</a> - Wrapper for form validation and layout</li>
+        <li><a href="?path=/docs/forms-input--docs">Input</a> - Text input fields</li>
+        <li><a href="?path=/docs/forms-inputotp--docs">InputOTP</a> - One-time password input</li>
+        <li><a href="?path=/docs/forms-label--docs">Label</a> - Accessible field labels</li>
+        <li><a href="?path=/docs/forms-radiogroup--docs">RadioGroup</a> - Single choice from list</li>
+        <li><a href="?path=/docs/forms-select--docs">Select</a> - Dropdown selection</li>
+        <li><a href="?path=/docs/forms-slider--docs">Slider</a> - Range selection</li>
+        <li><a href="?path=/docs/forms-switch--docs">Switch</a> - Toggle switch</li>
+        <li><a href="?path=/docs/forms-textarea--docs">Textarea</a> - Multi-line text input</li>
+        <li><a href="?path=/docs/forms-togglegroup--docs">ToggleGroup</a> - Group of two-state buttons</li>
+      </ul>
+    </div>
+
+    <div className="sb-index-column">
+      <h3 className="sb-index-title">Navigation</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/navigation-breadcrumb--docs">Breadcrumb</a> - Path navigation</li>
+        <li><a href="?path=/docs/navigation-command--docs">Command</a> - Command palette</li>
+        <li><a href="?path=/docs/navigation-contextmenu--docs">ContextMenu</a> - Right-click menu</li>
+        <li><a href="?path=/docs/navigation-drawer--docs">Drawer</a> - Mobile-friendly side overlay</li>
+        <li><a href="?path=/docs/navigation-dropdownmenu--docs">DropdownMenu</a> - Menu actions</li>
+        <li><a href="?path=/docs/navigation-menubar--docs">Menubar</a> - Desktop-style menu bar</li>
+        <li><a href="?path=/docs/navigation-navigationmenu--docs">NavigationMenu</a> - Complex site navigation</li>
+        <li><a href="?path=/docs/navigation-pagination--docs">Pagination</a> - Page navigation</li>
+        <li><a href="?path=/docs/navigation-tabs--docs">Tabs</a> - Tabbed interface</li>
+      </ul>
+
+      <h3 className="sb-index-title">Feedback</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/feedback-alertdialog--docs">AlertDialog</a> - Critical confirmation dialog</li>
+        <li><a href="?path=/docs/feedback-dialog--docs">Dialog</a> - Critical interaction overlay</li>
+        <li><a href="?path=/docs/feedback-progress--docs">Progress</a> - Progress bar</li>
+        <li><a href="?path=/docs/feedback-sheet--docs">Sheet</a> - Side-anchored overlay</li>
+        <li><a href="?path=/docs/feedback-sonner--docs">Sonner</a> - Stackable toast notifications</li>
+      </ul>
+
+      <h3 className="sb-index-title">Data Display</h3>
+      <ul className="sb-index-list">
+        <li><a href="?path=/docs/data-display-aspectratio--docs">AspectRatio</a> - Image/Content aspect ratio container</li>
+        <li><a href="?path=/docs/data-display-calendar--docs">Calendar</a> - Date picker/display</li>
+        <li><a href="?path=/docs/data-display-carousel--docs">Carousel</a> - Image/Content carousel</li>
+      </ul>
+    </div>
+
+  </div>
+
+</div>
+
+<style>
+  {`
+  .sb-container {
+    margin-bottom: 48px;
+  }
+
+  .sb-section-title {
+    margin-bottom: 32px;
+  }
+
+  .sb-section-title h1 {
+    font-weight: 800;
+    font-size: 32px;
+    margin-bottom: 12px;
+    color: #000;
+  }
+
+  .sb-section-title p {
+    font-size: 16px;
+    color: #444;
+    line-height: 1.6;
+    max-width: 800px;
+  }
+
+  .sb-section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+  }
+
+  .sb-section-item {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 16px;
+    background: #f8f9fa;
+    border-radius: 8px;
+  }
+
+  .sb-section-icon {
+    margin-bottom: 10px;
+    font-size: 32px;
+  }
+
+  .sb-section-heading {
+    font-weight: 700;
+    margin-bottom: 8px;
+    font-size: 16px;
+    color: #111;
+  }
+
+  .sb-section-description {
+    font-size: 14px;
+    color: #666;
+    line-height: 1.5;
+    margin: 0;
+  }
+
+  .sb-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  .sb-card {
+    padding: 24px;
+    border: 1px solid #e5e7eb;
+    border-radius: 8px;
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.2s ease;
+    background: #fff;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sb-card:hover {
+    border-color: #3b82f6;
+    transform: translateY(-2px);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    text-decoration: none;
+  }
+
+  .sb-card-title {
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 8px;
+    color: #111;
+  }
+
+  .sb-card-description {
+    font-size: 14px;
+    color: #666;
+    margin: 0;
+    line-height: 1.5;
+  }
+
+  .sb-index-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 32px;
+    margin-top: 24px;
+  }
+
+  .sb-index-column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sb-index-title {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 16px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #e5e7eb;
+    color: #000000;
+  }
+
+  .sb-index-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 24px;
+  }
+
+  .sb-index-list li {
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #555;
+  }
+
+  .sb-index-list li a {
+    color: #0284c7;
+    text-decoration: none;
+    font-weight: 500;
+  }
+
+  .sb-index-list li a:hover {
+    text-decoration: underline;
+  }
+  
+  /* Dark mode overrides (basic) */
+  @media (prefers-color-scheme: dark) {
+    .sb-section-item {
+      background: #1f2937;
+    }
+    .sb-section-heading {
+      color: #f3f4f6;
+    }
+    .sb-section-description {
+      color: #9ca3af;
+    }
+    .sb-card {
+      background: #1f2937;
+      border-color: #374151;
+    }
+    .sb-card-title {
+      color: #f3f4f6;
+    }
+    .sb-card-description {
+      color: #9ca3af;
+    }
+    .sb-index-title {
+      color: #f3f4f6;
+      border-bottom-color: #374151;
+    }
+    .sb-index-list li {
+      color: #9ca3af;
+    }
+    .sb-index-list li a {
+      color: #38bdf8;
+    }
+  }
+  `}
+</style>
